src/css/main.css
html, body {
  height: 100%;
}

.container-fluid {
  width: 100%;
}

#map {
  height: 100%;
  width: 100%;
}

#list {
  height: 100%;
  overflow: auto;
}

.navbar {
  margin-bottom: 0;
}

#main-content {
  height: calc(100% - 52px);
}

#main-content .row,
#main-content .col {
  height: 100%;
}

.offcanvas-toggle {
  position: relative;
  float: left;
  padding: 9px 10px;
  margin-top: 8px;
  margin-right: 15px;
  margin-bottom: 8px;
  background-color: transparent;
  background-image: none;
  border: 1px solid #ddd;
  border-radius: 4px;
}

.offcanvas-toggle .icon-bar {
  display: block;
  width: 22px;
  height: 2px;
  background-color: #888;
  border-radius: 1px;
}

.offcanvas-toggle .icon-bar+.icon-bar {
  margin-top: 4px;
}

/*
 * Off Canvas - http://getbootstrap.com/examples/offcanvas/
 * --------------------------------------------------
 */
.row-offcanvas {
  position: relative;
  -webkit-transition: all .25s ease-out;
       -o-transition: all .25s ease-out;
          transition: all .25s ease-out;
}

.row-offcanvas-left {
  left: 0;
}

.row-offcanvas-left
.sidebar-offcanvas {
  left: -25%; /* 3 columns */
}

.row-offcanvas-left.active {
  left: 25%; /* 3 columns */
}

.sidebar-offcanvas {
  position: absolute;
  top: 0;
  width: 25%; /* 3 columns */
}

